feat(core/menu): implement a11y features for menu and burger-menu (#582)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/src/components/menu/burger-menu.scss
+++ b/packages/core/src/components/menu/burger-menu.scss
@@ -7,9 +7,15 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'common-variables';
+@import 'components/buttons';
 @import 'mixins/hover';
+@import 'mixins/shadow-dom/component';
+
+$focus-bdr-width: 0.0625rem;
 
 :host {
+  @include ix-component;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +26,7 @@
 
   svg {
     display: inline-block;
-    position: relative;
+    vertical-align: middle;
   }
 
   .line {
@@ -31,21 +37,23 @@
       y 0.075s ease-in-out, opacity 0.075s linear 0.075s;
     transform-origin: center;
   }
+}
 
-  ix-icon-button {
-    transition: transform var(--theme-default-time);
-    pointer-events: none;
+@include host-hover {
+  .burger-menu-button {
+    background-color: var(--theme-menu-btn--background--hover);
   }
 }
 
-:host(:hover) {
-  background-color: var(--theme-menu-btn--background--hover);
-  border-radius: var(--theme-btn--border-radius);
+.burger-menu-button {
+  width: 40px;
+  padding: 0;
 }
 
-:host(:active) {
-  background-color: var(--theme-menu-btn--background--active);
-  border-radius: var(--theme-btn--border-radius);
+@include host-active {
+  .burger-menu-button {
+    background-color: var(--theme-menu-btn--background--active);
+  }
 }
 
 :host(.expanded) {
