fix(core/input): slot heights (#610)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -23,10 +23,12 @@
 
   .group-start {
     left: 0px;
+    height: 2rem;
   }
 
   .group-end {
     right: 0px;
+    height: 2rem;
   }
 
   ::slotted(*) {
