feat(core/expanding-search): migrate to shadow DOM

--- a/packages/core/src/components/expanding-search/expanding-search.scss
+++ b/packages/core/src/components/expanding-search/expanding-search.scss
@@ -6,14 +6,17 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-
 @import 'common-variables';
+@import 'components/forms';
+@import 'mixins/shadow-dom/component';
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
 
 $container-width: 11.5625rem;
 
 :host {
+  @include ix-component;
+
   display: inline-flex;
   width: auto;
   height: $x-large-space;
@@ -21,25 +24,14 @@ $container-width: 11.5625rem;
   justify-content: space-between;
   position: relative;
 
-  &.right-position {
-    width: $container-width !important;
-
-    &.fullWidth {
-      width: 100% !important;
-    }
-  }
-
   .input-container {
     transition: all 0.3s ease-in-out;
-  }
-
-  .disable-pointer {
-    pointer-events: none;
   }
 
   input {
     box-shadow: var(--theme-input--box-shadow);
     cursor: auto !important;
+    width: 100%;
   }
 
   .expanded {
@@ -92,6 +84,11 @@ $container-width: 11.5625rem;
     }
   }
 
+  .btn-search.btn-search--expanded {
+    margin-left: 0.25rem;
+    pointer-events: none;
+  }
+
   .btn-search:active {
     width: $x-large-space;
     height: $x-large-space;
@@ -125,5 +122,17 @@ $container-width: 11.5625rem;
 
   .opacity-after {
     opacity: 1;
+  }
+}
+
+:host(.right-position) {
+  width: $container-width !important;
+}
+
+:host(.right-position.fullWidth) {
+  width: 100% !important;
+
+  .fullWidth {
+    width: 100% !important;
   }
 }
