--- a/packages/core/scss/mixins/shadow-dom/_hover.scss
+++ b/packages/core/scss/mixins/shadow-dom/_hover.scss
@@ -7,15 +7,15 @@
  * LICENSE file in the root directory of this source tree.
  */
 @mixin hover() {
-  :host(:not(.disabled):not(:disabled).hover)
-    :host(:not(.disabled):not(:disabled):hover) {
+  :host(:not(.disabled):not(:disabled).hover),
+  :host(:not(.disabled):not(:disabled):hover) {
     @content;
   }
 }
 
 @mixin active() {
-  :host(:not(.disabled):not(:disabled).active)
-    :host(:not(.disabled):not(:disabled):active) {
+  :host(:not(.disabled):not(:disabled).active),
+  :host(:not(.disabled):not(:disabled):active) {
     @content;
   }
 }
