--- a/packages/core/src/components/select-item/select-item.scss
+++ b/packages/core/src/components/select-item/select-item.scss
@@ -14,6 +14,11 @@
   > ix-dropdown-item {
     width: 100%;
   }
+
+  .select-item-checked {
+    background-color: var(--theme-select-list-item--background--selected);
+    --ix-dropdown-item-checked-color: var(--theme-color-std-text);
+  }
 }
 
 :host(.d-none) {
