--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -156,6 +156,6 @@
     align-items: center;
     height: $default-control-height;
     color: var(--theme-select-list-item-hint--color);
-    margin: 0 $small-space 0 $x-large-space;
+    margin: 0 $small-space 0 1rem;
   }
 }
