feat(core/chip): enable shadow dom (#603)
Co-authored-by: Daniel Leroux <daniel.leroux@siemens.com>

--- a/packages/core/src/components/icon-button/icon-button.scss
+++ b/packages/core/src/components/icon-button/icon-button.scss
@@ -22,6 +22,10 @@
   button:not(:disabled) {
     cursor: pointer;
   }
+
+  ix-icon {
+    color: var(--ix-icon-button-color);
+  }
 }
 
 :host(.btn-icon-12) {
