--- a/packages/core/src/components/typography/typography.scss
+++ b/packages/core/src/components/typography/typography.scss
@@ -1,60 +1,79 @@
+/*
+ * SPDX-FileCopyrightText: 2023 Siemens AG
+ *
+ * SPDX-License-Identifier: MIT
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
+
 @import 'common-variables';
 @import 'mixins/fonts';
+@import 'mixins/shadow-dom/component';
 
 :host {
-  .text-xs {
-    @include text-xs;
-  }
+  @include ix-component;
 
-  .text-s {
-    @include text-s;
-  }
+  display: block;
+  position: relative;
 
-  .text-caption {
-    @include text-caption;
-  }
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 
-  .text-caption-single {
-    @include text-caption-single;
-  }
+:host(.text-xs) {
+  @include text-xs;
+}
 
-  .text-default {
-    @include text-default;
-  }
+:host(.text-s) {
+  @include text-s;
+}
 
-  .text-default-single {
-    @include text-default-single;
-  }
+:host(.text-caption) {
+  @include text-caption;
+}
 
-  .text-default-title {
-    @include text-default-title;
-  }
+:host(.text-caption-single) {
+  @include text-caption-single;
+}
 
-  .text-default-title-single {
-    @include text-default-title-single;
-  }
+:host(.text-default) {
+  @include text-default;
+}
 
-  .text-l {
-    @include text-l;
-  }
+:host(.text-default-single) {
+  @include text-default-single;
+}
 
-  .text-l-single {
-    @include text-l-single;
-  }
+:host(.text-default-title) {
+  @include text-default-title;
+}
 
-  .text-l-title {
-    @include text-l-title;
-  }
+:host(.text-default-title-single) {
+  @include text-default-title-single;
+}
 
-  .text-l-title-single {
-    @include text-l-title-single;
-  }
+:host(.text-l) {
+  @include text-l;
+}
 
-  .text-h2 {
-    @include text-h2;
-  }
+:host(.text-l-single) {
+  @include text-l-single;
+}
 
-  .text-xl {
-    @include text-xl;
-  }
+:host(.text-l-title) {
+  @include text-l-title;
+}
+
+:host(.text-l-title-single) {
+  @include text-l-title-single;
+}
+
+:host(.text-h2) {
+  @include text-h2;
+}
+
+:host(.text-xl) {
+  @include text-xl;
 }
