--- a/packages/core/src/components/modal/modal.scss
+++ b/packages/core/src/components/modal/modal.scss
@@ -26,7 +26,7 @@
   }
 
   .modal {
-    display: flex;
+    display: grid;
     position: relative;
     flex-direction: column;
     border: none;
@@ -66,15 +66,6 @@
     width: 95%;
   }
 
-  // Modal types
-
-  .modal-type-message {
-    ::slotted(ix-modal-footer),
-    ::slotted(ix-modal-content) {
-      margin-left: 42px;
-    }
-  }
-
   .dialog-backdrop {
     display: block;
     position: fixed;
@@ -85,8 +76,6 @@
 
     pointer-events: none;
   }
-
-  // 42
 }
 
 :host(.align-center) {
@@ -101,5 +90,12 @@
   dialog::backdrop {
     background-color: transparent !important;
     backdrop-filter: none !important;
+  }
+}
+
+:host(.with-icon) {
+  ::slotted(ix-modal-footer),
+  ::slotted(ix-modal-content) {
+    margin-left: 2.5rem;
   }
 }
