docs: adapt breaking-changes

--- a/packages/core/src/components/modal-footer/modal-footer.scss
+++ b/packages/core/src/components/modal-footer/modal-footer.scss
@@ -12,6 +12,7 @@
   @include ix-component;
   display: flex;
   padding: 0.625rem;
+  padding-top: 1.5rem;
   justify-content: flex-end;
   align-items: center;
   gap: 0.5rem;
