--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -69,24 +69,25 @@ $button-categories: (primary, secondary);
     }
 
     &.selected {
-      background-color: var(--theme-btn-#{$name}--background--selected);
+      background-color: var(--theme-color-ghost--selected);
+      color: var(--theme-color-dynamic);
     }
 
     &.hover,
     &:hover {
       @if $enable-border {
-        border-color: var(--theme-btn-#{$name}--border-color--hover) !important;
+        border-color: var(--theme-btn-#{$name}--border-color--hover);
       }
 
-      background-color: var(--theme-btn-#{$name}--background--hover) !important;
-      color: var(--theme-btn-#{$name}--color--hover) !important;
+      background-color: var(--theme-btn-#{$name}--background--hover);
+      color: var(--theme-btn-#{$name}--color--hover);
     }
 
     &.selected {
       &.hover,
       &:hover {
-        background-color: var(--theme-btn-#{$name}--background--selected-hover);
-        color: var(--theme-btn-#{$name}--color--selected-hover);
+        background-color: var(--theme-color-ghost--selected-hover);
+        color: var(--theme-color-dynamic);
       }
     }
 
@@ -96,13 +97,13 @@ $button-categories: (primary, secondary);
       @if $enable-border {
         border-color: var(
           --theme-btn-#{$name}--border-color--active
-        ) !important;
+        );
       }
 
-      background-color: var(
+     background-color: var(
         --theme-btn-#{$name}--background--active
-      ) !important;
-      color: var(--theme-btn-#{$name}--color--active) !important;
+      );
+      color: var(--theme-btn-#{$name}--color--active);
     }
 
     &.selected {
@@ -110,9 +111,10 @@ $button-categories: (primary, secondary);
       &:not(:disabled):not(.disabled).active,
       .show > &.dropdown-toggle {
         background-color: var(
-          --theme-btn-#{$name}--background--selected-active
+          --theme-color-ghost--selected-active
         );
-        color: var(--theme-btn-#{$name}--color--selected-active);
+
+        color: var(--theme-color-dynamic);
       }
     }
 
