--- a/packages/core/src/components/spinner/spinner.scss
+++ b/packages/core/src/components/spinner/spinner.scss
@@ -105,6 +105,8 @@
   }
 }
 
+@include ix-spinner($host-class: 'xx-small', $size: 0.75rem, $track-size: 1px);
+@include ix-spinner($host-class: 'x-small', $size: 1.25rem, $track-size: 2px);
 @include ix-spinner($host-class: 'small', $size: 1.5rem, $track-size: 2px);
 @include ix-spinner($host-class: 'medium', $size: 2rem, $track-size: 2px);
 @include ix-spinner($host-class: 'large', $size: 6rem, $track-size: 4px);
