fix(core): siemens sans font added to button

--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -15,6 +15,7 @@
   align-items: center;
   justify-content: center;
   height: $x-large-space;
+  font-family: Siemens Sans;
   font-size: $font-size-default;
   font-weight: $font-weight-bold;
   transition: $default-time;
