--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5rem 0;
+    padding: 4.25rem 0;
   }
 
   input,
@@ -41,8 +41,8 @@
     width: 2.625rem;
     height: $large-space;
     text-align: center;
-    margin-top: $small-space;
-    margin-bottom: $small-space;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
 
     /* Chrome, Safari, Edge, Opera */
     &::-webkit-outer-spin-button,
@@ -92,6 +92,7 @@
   }
 
   .time-reference {
-    margin: $medium-space 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
