--- a/packages/core/src/components/modal/modal.scss
+++ b/packages/core/src/components/modal/modal.scss
@@ -7,100 +7,93 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import '~bootstrap/scss/_functions';
-@import '~bootstrap/scss/mixins/_breakpoints.scss';
-@import '~bootstrap/scss/_variables.scss';
+::backdrop {
+  --ix-dialog-backdrop: var(--theme-color-lightbox, #0000008c);
+}
 
-@import 'common-variables';
+:focus-visible {
+  outline: none !important;
+}
 
 :host {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
+  dialog {
+    margin: 0;
+    left: 50%;
+  }
+
+  dialog::backdrop {
+    backdrop-filter: blur(2.7182817459106445px);
+  }
 
   .modal {
-    display: flex;
+    display: grid;
+    position: relative;
+    flex-direction: column;
+    border: none;
+    border-radius: var(--theme-default-border-radius);
+    background: var(--theme-modal--background);
+    box-shadow: var(--theme-shadow-4);
+    color: var(--theme-color-std-text);
 
-    &.animation {
-      animation: modal-fade $medium-time ease-in-out;
-    }
+    max-height: 80vh;
+    overflow: hidden;
+    pointer-events: all;
+  }
 
-    &.backdrop {
-      background-color: var(--theme-color-lightbox);
-      backdrop-filter: blur(4px);
-      transition: none;
+  .modal-size-360 {
+    width: 22.5rem;
+  }
 
-      &.animation {
-        transition: backdrop-filter $short-time ease-in-out;
-      }
-    }
+  .modal-size-480 {
+    width: 30rem;
+  }
 
-    .modal-dialog {
-      flex-grow: 1;
-    }
+  .modal-size-600 {
+    width: 37.5rem;
+  }
 
-    &.scrollable {
-      .modal-content {
-        max-height: 100%;
-        .modal-body {
-          overflow-y: auto;
-        }
-      }
-    }
+  .modal-size-720 {
+    width: 45rem;
+  }
 
-    .modal-content {
-      box-shadow: var(--theme-modal--box-shadow);
-      flex-direction: row;
-      background-color: var(--theme-modal--background);
-      border: var(--modal--border-thickness) solid
-        var(--theme-modal--border-color);
-      padding: $large-space;
-      max-height: 100vh;
-      border-radius: var(--theme-default-border-radius);
+  .modal-size-840 {
+    width: 52.5rem;
+  }
 
-      .state-icon-container {
-        margin-inline-end: $default-space;
-      }
+  .modal-size-full-width {
+    width: 95%;
+  }
 
-      .slot-container {
-        flex-grow: 1;
-      }
-    }
+  .dialog-backdrop {
+    display: block;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
 
-    @include media-breakpoint-up(sm) {
-      .modal-dialog:not(.modal-dialog-centered) {
-        margin: 2.5rem auto;
-      }
-    }
+    pointer-events: none;
+  }
+}
 
-    @include media-breakpoint-down(sm) {
-      .modal-dialog {
-        height: 100%;
-        margin: 0;
+:host(.align-center) {
+  dialog {
+    margin: 0;
+    left: 50%;
+    top: 50%;
+  }
+}
 
-        .modal-content {
-          height: 100%;
-          border-radius: 0;
-        }
-      }
-    }
+:host(.no-backdrop) {
+  dialog::backdrop {
+    background-color: transparent !important;
+    backdrop-filter: none !important;
+  }
+}
 
-    @keyframes modal-fade {
-      from {
-        opacity: 0%;
-      }
-      to {
-        opacity: 100%;
-      }
-    }
-
-    @keyframes slide-down {
-      from {
-        top: -100%;
-      }
-      to {
-        top: 32px;
-      }
-    }
+:host(.with-icon) {
+  ::slotted(ix-modal-footer),
+  ::slotted(ix-modal-content) {
+    margin-left: 2.5rem;
   }
 }
