--- a/packages/core/src/components/group/group-context-menu.scss
+++ b/packages/core/src/components/group/group-context-menu.scss
@@ -9,15 +9,13 @@
 :host {
   display: block;
   position: relative;
+
+  height: 2rem;
+  width: 2rem;
+
   margin-block-start: 0.3125rem;
   margin-inline-end: 0.3125rem;
   margin-inline-start: auto;
-
-  ix-icon-button {
-    &::after {
-      display: none;
-    }
-  }
 
   .hide {
     visibility: collapse;
